# rag-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  config-aws.yaml  config-local.yaml  config.yaml  init.py  interactive_graph.html  main.py  pdf_document_parser.py  pyproject.toml  viz.py
data/third-data-extraction/: all-entity-types.json
pipeline/: s1_read_and_extract_text.py  s2_semantically_group_paragraphs.py  s3_summarize_grouped_files.py  s4_entity_type_identification.py  s5_extract_entities.py  s6_relate_entities.py
pipeline/contextual_retrieval/: s1_contextually_place_chunks.py
pipeline/general/: s1_read_and_extract_text.py  s2_semantically_group_paragraphs.py  s3_summarize_grouped_files.py
pipeline/graph_rag/: s2_extract_entities.py
utils/: entity_extraction.py  init.py  pdf_document_parser.py  semantic_grouping.py  types_identification.py
utils/base_operations/: contextually_place_chunk.py  document_summary.py  entity_extraction.py  file_search.py  relate_entities.py  semantic_grouping.py  types_identification.py
utils/legacy/: entity_extraction_v0.py  entity_extraction_v1.py
utils/models/: document_processing.py  graphrag_models.py
utils/prompts/: entity_extraction_prompts.py  semantic_grouping_prompts.py  summary_prompts.py  types_identification_prompts.py
utils/prompts/contextual_retrieval/: contextualize_chunks_prompts.py
utils/prompts/general/: semantic_grouping_prompts.py
utils/prompts/graphrag/: relationship_extraction_prompts.py
