[project]
name = "rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.35.0",
    "langchain-aws>=0.2.14",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.34",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.2.3",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20240706",
    "pi-heif>=0.21.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "unstructured[all-docs]>=0.16.20",
    "unstructured-inference>=0.8.7",
    "unstructured-pytesseract>=0.3.13",
]
